# fast-social-api

./: Dockerfile  Dockerfile.nginx  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2c149520cc38_create_users_table.py  2c73bf18562f_create_posts_table.py  37b7fc45912e_auto_vote_table.py  52f873ec8bdf_creating_foreign_key_in_posts_table_to_.py
app/: config.py  database.py  main.py  model.py  oauth2.py  schema.py  utils.py
app/routers/: auth.py  post.py  user.py  vote.py
tests/: conftest.py  database.py  test_posts.py  test_users.py
